# pomace-twitter.com

./: .gitignore  Makefile  pyproject.toml
.pomace/twitter.com/p/@/v/: default.yml
.pomace/twitter.com/p/explore/v/: default.yml
.pomace/twitter.com/p/login/v/: default.yml
.pomace/twitter.com/p/{username}/v/: block.yml  default.yml  more.yml
.pomace/twitter.com/∕/: default.yml
.pomace/twitter.com/∕explore/: authenticated.yml  default.yml
.pomace/twitter.com/∕login/: default.yml
.pomace/twitter.com/∕{username}/: block.yml  default.yml  more.yml
.pomelo/twitter.com/∕/: default.yml
.pomelo/twitter.com/∕login/: default.yml
.pomelo/twitter.com/∕{username}/: block.yml  more.yml
@/: default.yml
compose/tweet/: default.yml
explore/: authenticated.yml  default.yml
home/: default.yml
i/flow/login/: default.yml
login/: default.yml
sites/twitter.com/explore/: default.yml
sites/twitter.com/login/: default.yml
sites/twitter.com/{username}/: block.yml
{username}/: block.yml  default.yml  more.yml
