[tool.poetry]

name = "pomace-twitter"
version = "0.0"
description = "Pomace models for Twitter pages."
authors = ["Jace Browning <jacebrowning@gmail.com>"]

[tool.poetry.dependencies]

python = "^3.7"

pomace = "0.0.11"

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
